Refactored and Rewrote code for JavaFX for more modern GUI components Shifted MVC architecture to reflect library switch. Error with user refresh is present.

--- a/build.gradle
+++ b/build.gradle
@@ -41,5 +41,5 @@ jar {
     from configurations.compile.collect { zipTree it }
     baseName = "Pomodoro"
     version = "1.0"
-    manifest.attributes "Main-Class": "app.Mac.pomodoro.Main"
+    manifest.attributes "Main-Class": "app.Mac.pomodoro.Window"
 }
