--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 
 sourceSets {
     main.java.srcDirs = ["src/main"]
+    main.resources.srcDirs = ["src/main/resources"]
     test.java.srcDirs = ["src/test"]
 }
 
